--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,48 @@
   <head lang="en">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Hello Html</title>
+    <title>Reef Tanks</title>
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/screen.css" />
   </head>
   <body>
-    <h1 class="hello-world">Hello, World!</h1>
+    <h1 class="Saltwater Reef Tanks!">Saltwater Reef Tanks!</h1>
+    <img src="images/Clown.jpg" height="600" alt="Clownfish with anemone" />
+    <h2>Background</h2>
+
+    <p>
+      As a family we have started to tinker with a small freshwater tank with a
+      few snails and an angelfish. this new venture has sparked my curiosity,
+      and drawn me to the complexity and beauty of saltwater reef tanks. While
+      shopping for supplies for our freshwater tank I was instantly drawn to the
+      elaborate and beautiful saltwater tanks with coral, Anemone and various
+      other marine life.
+    </p>
+
+    <p>
+      Growing up, my grandmother owned a small hotel on the Gulf of Mexico in
+      SWFL. Many summer days were spent swimming, snorkeling and interacting
+      with the marine life right outside her back door.
+    </p>
+
+    <p>
+      Watching the reef tanks reminded me of my childhood and has inspired me to
+      begin the endless amount of research (and money) it takes to build and
+      sustain one of these incredible tanks.
+    </p>
+    <h3>Components of tank</h3>
+    <ul>
+      <li>Aquarium</li>
+      <li>Stand</li>
+      <li>Sump</li>
+      <li>Return Pump</li>
+      <li>Protein Skimmer</li>
+      <li>Powerheads</li>
+      <li>Lighting</li>
+      <li>Live Rock</li>
+      <li>Sand</li>
+      <li>Coral</li>
+      <li>Fish</li>
+    </ul>
   </body>
 </html>
